--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/plspecter/chirpy-1#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "moment": "^2.22.2",
     "mysql": "^2.16.0"
   }
 }
